--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="The world's finest job">
+  <meta name="author" content="862367124">
 
-  <title>John Doe - Business Administration</title>
+  <title>John Reyes - Psychologist</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">John Reyes</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/johnreyes.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,30 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">John Reyes
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Therapist📚</div>
+        <p class="lead mb-4">The masterclassful CEO of Nike and Adidas, John Reyes<br><br>
 
-        Enter bio here<br><br>
+        Born in the Philippines and grew up there until the age of 9, where his family has moved to America. He lives with a family of four including him. He has a little sister, mom, and dad. His family moved to the City of Angels, which is Los Angeles. He grew up mostly in East Hollywood. Went to middle school at Le Conte and went to Highschool at Hollywood High. He is an icon to the Filipino people. He made advances in the psychology world as well in fashion. In the Philippines he loved basketball, and his passion for shoes grew stronger when he moved to LA. His favorite player was Kobe. At the age of 17 he was working in Yoshinoya in summer. An ordinary kid at that time just trying to get by. At the last half of that summer he wanted and needed money for his family.  At the age of 20 he became the CEO of Nike. Not only that he is one of the co-creators of Adidas. Two of the best shoe companies that lived. Not only is he the owner of these companies but he also owns a part of the LA Dodgers. Shared with Jeanie Buss and him. At the age of 23 he graduated in UCR with a B.A in psychology. The class of 2026 His research has helped many deal with mental illnesses. Before becoming the CEO of Nike and half-owner of Adidas, he worked at his campus job to pay for his needs and such.
+He wanted more money than what he was getting paid so he started side-hustling. He resold shoes that were limited and rare and made some money off that. He then started designing shoes and pitched his designs to Nike, where he would later on become the CEO of it. One of his first shoe designs was the Nike Air Force 1’s. Which brought popularity to the whole world. Every kid on the block had these shoes, and many teens had at least one in their closets. His shoe designs were particularly sought out by shoe enthusiasts.
+.<br><br>
 
-        Enter bio here
+        He is one of the most known psychologists in the world, his TEDxTalks have inspired many to be just like him. Not only is he a psychologist but he also is the CEO of Nike and Adidas. What more can he accomplish? Right now he is also one of the best fashion designers too. Saint Lauren, Balenciaga, and much more have done collaborations with John. He mainly worked in shoes and top designs. Working with many brands has introduced him to many different people and famous people. He has met one of the most successful people in the world. 
+The key to being successful? John would say “networking and discipline”, which was said from his TEDxTalk. Meeting new people with different interests, and people who are motivated or “hungry” is good for you because you will be inspired by these people and do the same.
+
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/in/john-reyes-3463b9243//">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/cancuno">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/random_user143">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:jreye225@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +96,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Student Worker</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">UCR Dining</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Works at the Lothian Dining Hall<br> 
+              • Server, restocker, dishwasher, cashier <br>
+              • Experience with knifes and such<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">Sept 2022 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
             <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Yoshinoya</a></div>
             <p>
               • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Taking orders and such<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">June 2021 - May 2022</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Photographer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Yearbook class in Hollywood High</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Took photos of the sports teams<br>
+            • Photos of any fun school event, homecoming, winter dance, and etc.<br>
+            • Edited and retouched photos in Photoshop, removed some background nuisances too<br>
+            • Was the best photographer said by teacher<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">August 2021 - June 2022</span>
           </div>
         </div>
 
@@ -152,33 +156,22 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelor's in Psychology</div>
+            <div>B.A Psychology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">Sept 2022  - June 2026</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">Hollywood Highschool</h3>
+            <div class="subheading mb-3">3.9 GPA Graduate</div>
+            <div>Highschool Diploma </div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2018 - June 2022</span>
           </div>
         </div>
 
@@ -191,7 +184,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/lothian.jpg" width="500px">
+            <img src="img/yoshinoya.jpg" width="500px"><br>
+    <img src="img/HHS.jpg" width="500px">
+    <img src="img/HHS2.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +195,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> John Reyes</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
